# MIFin

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  requirements.txt
cmake/: EnableCompilerWarnings.cmake  googletest.cmake
src/: CMakeLists.txt  base64.cpp  conv_fin.cpp  fin.cpp  input_flags.cpp  main.cpp  tensor.cpp
src/include/: base64.hpp  batch_norm_fin.hpp  bn_fin.hpp  config.h.in  conv_fin.hpp  error.hpp  fin.hpp  gpuMemTensor.hpp  gpu_mem.hpp  input_flags.hpp  random.hpp  random_test.hpp  tensor.hpp  tensor_holder.hpp
src/tests/: fin_input.json  fin_input_find_compile.json  fin_input_find_compile2.json  fin_input_find_kernel.json  fin_input_perf_compile.json  fin_output_applicability.json  fin_output_find_compile-1.json  fin_output_find_compile-2.json
tests/: CMakeLists.txt  bn_configs_fin_all.json  bn_fin_test.cpp  fin_input_find_compile2.json  mem_layout_test.cpp
